<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="game.activity.OptionsActivity"
    android:background="@drawable/bg" >

            <Button
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/text1"
                android:layout_below="@+id/text1"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_rounded"
                android:ems="10"
                android:gravity="center"
                android:onClick="onClickClearResults"
                android:shadowRadius="5"
                android:text="@string/clear_results"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/text4"
                android:layout_below="@+id/text4"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle_rounded"
                android:ems="10"
                android:gravity="center"
                android:onClick="onClickAboutGame"
                android:shadowRadius="5"
                android:text="@string/about"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/text5"
                android:layout_below="@+id/text5"
                android:layout_marginTop="71dp"
                android:background="@drawable/rectangle_rounded"
                android:ems="10"
                android:gravity="center"
                android:onClick="onClickExit"
                android:shadowRadius="5"
                android:text="@string/exit_game"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/text4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/text3"
                android:layout_below="@+id/text3"
                android:layout_marginTop="16dp"
                android:background="@drawable/rectangle_rounded"
                android:ems="10"
                android:gravity="center"
                android:onClick="onClickRules"
                android:shadowRadius="5"
                android:text="@string/rules"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@+id/text1"
                android:layout_alignParentTop="true"
                android:layout_marginTop="29dp"
                android:background="@drawable/rectangle_rounded"
                android:ems="10"
                android:gravity="center"
                android:onClick="onClickNewGame"
                android:shadowRadius="5"
                android:text="@string/start_new_game"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="normal" />

            <Button
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/text2"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="15dp"
                android:background="@drawable/rectangle_rounded"
                android:ems="10"
                android:gravity="center"
                android:onClick="onClickResults"
                android:shadowRadius="5"
                android:text="@string/last_results"
                android:textColor="@color/blue"
                android:textSize="20sp"
                android:textStyle="normal" />
    
</RelativeLayout>
