<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/bg"
    tools:context="game.activity.RulesActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textNewGame"
        android:layout_alignParentTop="true"
        android:layout_marginTop="80dp"
        android:text="@string/rules_of_the_game"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/text6"
        android:layout_width="109dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/rectangle_rounded"
        android:ems="10"
        android:gravity="center"
        android:onClick="onClickBack"
        android:shadowRadius="5"
        android:text="@string/back"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="normal" />

    <Button
        android:id="@+id/textNewGame"
        android:layout_width="269dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView1"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:background="@drawable/rectangle_rounded"
        android:ems="10"
        android:gravity="center"
        android:onClick="onClickNewGame"
        android:shadowRadius="5"
        android:text="@string/start_new_game"
        android:textColor="@color/blue"
        android:textSize="20sp"
        android:textStyle="normal" />

</RelativeLayout>